# fixedint

./: .gitignore  Makefile  README.md  pyproject.toml
src/fixedint/: __init__.py  fixedint.py
test/: test_fixedint.py
