[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fixedint"
authors = [
    {name = "Vincent Lin", email = "vinlin24@outlook.com"},
]
description = "Custom implementation of fixed-size integer classes in Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["int"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "fixedint.__version__"}
